# libb-mail

./: .gitignore  README.md  pyproject.toml
src/mail/: __init__.py  client.py  config.py  mail.py  mime.types
tests/: config.py  test_mail.py
