[tool.poetry]
name = "libb-mail"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "mail", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"

mailchimp-transactional = { version = "^1.0.56" }
libb-util = { git = "https://github.com/bissli/libb-util.git", rev = "master" }

# == test
asserts = { version = "^0.12.0", optional = true }
pytest = { version = "^8.0.0", optional = true }
pytest-mock = { version = "^3.12.0", optional = true }
pytest-runner = { version = "^6.0.1", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", rev = "master", optional = true }
wrapt = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pdbpp",
  "pytest",
  "pytest-mock",
  "pytest-runner",
  "wrapt",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
