[tool.poetry]
name = "libb-mail"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "mail", from = "src" }]

[tool.poetry.dependencies]
python = "~3.11"

mailchimp-transactional = { version = "^1.0.56" }

libb-util = { git = "https://github.com/bissli/libb-util", rev = "master" }

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pytest-runner = { version = "*", optional = true }
wrapt = { version = "*", optional = true }
pdbpp = { git = "https://github.com/pdbpp/pdbpp.git", optional = true, rev = "master" }

[tool.poetry.extras]
test = [
  "asserts",
  "pdbpp",
  "pytest",
  "pytest-mock",
  "pytest-runner",
  "wrapt",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
