[tool.poetry]
name = "libb-mail"
version = "0.1.0"
description = ""
authors = ["bissli <bissli@xyz.com>"]
readme = "README.md"
packages = [{ include = "mail", from = "src" }]

[tool.poetry.dependencies]
python = "^3.9"

mailchimp-transactional = "1.2.0"

libb-util = "*"

# == test
asserts = { version = "*", optional = true }
pytest = { version = "*", optional = true }
pytest-mock = { version = "*", optional = true }
pytest-runner = { version = "*", optional = true }
wrapt = { version = "*", optional = true }

[tool.poetry.extras]
test = [
  "asserts",
  "pytest",
  "pytest-mock",
  "pytest-runner",
  "wrapt",
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
